--- a/main.html
+++ b/main.html
@@ -41,6 +41,22 @@
         </nav>
     </section>
 
+    <!----------- banner section ------------------>
+
+    <section id="banner">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <p>BEST DIGITAL AGENCY</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quo consequatur commodi aliquam vero rem atque dolorum veritatis quam sunt quasi deleniti aperiam nam, error nobis exercitationem sequi ut architecto! </p>
+
+                </div>
+            </div>
+        </div>
+
+    </section>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
