--- a/main.html
+++ b/main.html
@@ -48,9 +48,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
-                    <p>BEST DIGITAL AGENCY</p>
+                    <p class="promo-title">BEST DIGITAL AGENCY</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium quo consequatur commodi aliquam vero rem atque dolorum veritatis quam sunt quasi deleniti aperiam nam, error nobis exercitationem sequi ut architecto! </p>
-
+                    <a href="#"><img src="" alt="banner"></a>
                 </div>
             </div>
         </div>
